# woopy

./: LICENSE  README.md  setup.cfg  woopy.py
src/woopy/: __init__.py
