[metadata]
name = woopy
version = 1.0.3
author = Kasper Dokter
author_email = k.p.c.dokter@gmail.com
description = A minimal Python API for WooTrade
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kasperdokter/woopy
project_urls =
    Bug Tracker = https://github.com/kasperdokter/woopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    websockets

[options.packages.find]
where = src